# local-llm-judge

./: .gitignore  README.md  collect.sh  eval_agent.py  pairwise.py  pyproject.toml
local_llm_judge/: eval_agent.py  inference.py  log_stdout.py  main.py  qwen.py  shell.py  train.py  wands_data.py
