[tool.poetry]
name = "local-lm-as-judge"
version = "0.1.0"
description = ""
authors = ["Doug Turnbull <softwaredoug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
pandas = "^2.2.3"
mlx = "^0.22.0"
mlx-lm = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
